--- a/css/css.scss
+++ b/css/css.scss
@@ -1,3 +1,22 @@
 body {
   color: white;
 }
+
+code {
+  padding: .2em .4em;
+  margin: 0;
+  white-space: break-spaces;
+  background-color: #ced4da;
+  border-radius: 6px;
+  font-family: monospace;
+  font-size: 1em;
+  color: #495057;
+}
+
+.offcanvas {
+  min-width: 50%;
+
+  &-title code {
+    font-size: .75em;
+  }
+}
