--- a/css/css.scss
+++ b/css/css.scss
@@ -47,7 +47,7 @@ code {
   display: inline-block;
   width: 40px;
   height: 20px;
-  background-image: url(/img/bill-icon.png);
+  background-image: url(../img/bill-icon.png);
   background-repeat: no-repeat;
   background-size: contain;
 }
